--- a/package.json
+++ b/package.json
@@ -6,8 +6,14 @@
     "dev": "nodemon app.js"
   },
   "dependencies": {
+    "bcryptjs": "^3.0.3",
+    "body-parser": "^2.2.1",
+    "connect-mongo": "^6.0.0",
+    "dotenv": "^17.2.3",
     "ejs": "^3.1.9",
-    "express": "^4.18.2",
+    "express": "^4.22.1",
+    "express-session": "^1.18.2",
+    "jsonwebtoken": "^9.0.3",
     "mongoose": "^8.0.0"
   },
   "devDependencies": {
